1.0.0
 * Add job_timeout_seconds writer option (CASSANDRA-19827)
 * Prevent double closing sstable writer (CASSANDRA-19821)
 * Stream sstable eagerly when bulk writing to reclaim local disk space sooner (CASSANDRA-19806)
 * Split the Cassandra type logic out from CassandraBridge into a separate module (CASSANDRA-19793)
 * Remove other uses of Apache Commons lang for hashcode, equality and random string generation (CASSANDRA-19791)
 * Split out BufferingInputStream stats into separate interface (CASSANDRA-19778)
 * Bump Sidecar version to 55a9efee (CASSANDRA-19774)
 * Add new module cassandra-analytics-common to store common code with minimal dependencies (CASSANDRA-19748)
 * Bulk writer fails validation stage when writing to a cluster using RandomPartitioner (CASSANDRA-19727)
 * Invalid mapping when timestamp is used as a partition key during bulk writes (CASSANDRA-19716)
 * NullPointerException when reading static column with null values (CASSANDRA-19626)
 * Integrate with the latest sidecar client (CASSANDRA-19616)
 * Support bulk write via S3 (CASSANDRA-19563)
 * Support UDTs in the Bulk Writer (CASSANDRA-19340)
 * Fix bulk reads of multiple tables that potentially have the same data file name (CASSANDRA-19507)
 * Fix XXHash32Digest calculated digest value (CASSANDRA-19500)
 * Report additional bulk analytics job stats for instrumentation (CASSANDRA-19418)
 * Add certificate expiry check to start up validations done in Cassandra Analytics library (CASSANDRA-19424)
 * Use constant reference time during bulk read process (CASSANDRA-19452)
 * Update access of ClearSnapshotStrategy (CASSANDRA-19442)
 * Bulk reader fails to produce a row when regular column values are null (CASSANDRA-19411)
 * Use XXHash32 for digest calculation of SSTables (CASSANDRA-19369)
 * Startup Validation Failures when Checking Sidecar Connectivity (CASSANDRA-19377)
 * No longer need to synchronize on Schema.instance after Cassandra 4.0.12 (CASSANDRA-19351)