@@ -100,7 +100,7 @@ public class Decimal extends NativeType
     }
 
     @Override
-    public void setInnerValue(SettableByIndexData<?> udtValue, int position, Object value)
+    protected void setInnerValue(SettableByIndexData<?> udtValue, int position, Object value)
     {
         udtValue.setDecimal(position, (BigDecimal) value);
     }
