@@ -41,7 +41,7 @@ public class Time extends LongBased
     }
 
     @Override
-    public void setInnerValue(SettableByIndexData<?> udtValue, int position, Object value)
+    protected void setInnerValue(SettableByIndexData<?> udtValue, int position, Object value)
     {
         udtValue.setTime(position, (long) value);
     }
